fix(theme-minimal): post body gap

--- a/packages/blogkit-theme-minimal/src/style.css
+++ b/packages/blogkit-theme-minimal/src/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.post-body > *:first-child {
+  @apply mt-12;
+}
+
 .post-body h1,
 .post-body h2,
 .post-body h3,
